# CommandLM

./: Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: assistant.rs  cli.rs  config.rs  lib.rs  main.rs  shell.rs
src/shellgpt/: __init__.py  assistant.py  cli.py  config.py  shell.py
tests/: integration_tests.rs
