# Cargo.toml
[package]
name = "shellgpt"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.17"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
home = "0.5"