[package]
name = "commandlm"
version = "1.0.0"
edition = "2021"
authors = ["Jordan Boesch"]
description = "An AI-powered command line assistant"
readme = "README.md"
homepage = "https://github.com/boeschj/CommandLM"
repository = "https://github.com/boeschj/CommandLM"
license = "MIT"
keywords = ["cli", "assistant", "openai", "gpt", "shell"]
categories = ["command-line-utilities"]

include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "clm"
path = "src/main.rs"

[dependencies]
async-openai = "0.17"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
home = "0.5"
indicatif = "0.17.8"
atty = "0.2.14"
