[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellgpt"
version = "0.1.0"
description = "AI-powered command line assistant"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "openai>=0.27.0",
    "rich>=10.0.0",
]

[project.scripts]
shellgpt = "shellgpt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shellgpt"]